Ubicación del Dockerfile y adaptación del .sh

--- a/webapp/my-httpd-vhosts.conf
+++ b/webapp/my-httpd-vhosts.conf
@@ -1,3 +1,12 @@
+# Redirigir HTTP a HTTPS
+<VirtualHost *:80>
+    ServerName 192.168.60.3
+    DocumentRoot /var/www/webapp
+
+    # Redirige todo el tráfico HTTP a HTTPS
+    Redirect permanent / https://192.168.60.3/
+</VirtualHost>
+
 <VirtualHost *:443>
     DocumentRoot "/var/www/webapp"
     ServerName localhost
@@ -5,5 +14,11 @@
     SSLEngine on
     SSLCertificateFile "/etc/ssl/certs/localhost.crt"
     SSLCertificateKeyFile "/etc/ssl/private/localhost.key"
+
+    <Directory /var/www/webapp>
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
+    </Directory>
 
 </VirtualHost>
