--- a/webapp/my-httpd-vhosts.conf
+++ b/webapp/my-httpd-vhosts.conf
@@ -15,10 +15,10 @@
     SSLCertificateFile "/etc/ssl/certs/localhost.crt"
     SSLCertificateKeyFile "/etc/ssl/private/localhost.key"
 
-    <Directory /var/www/webapp>
-        Options Indexes FollowSymLinks
-        AllowOverride All
-        Require all granted
-    </Directory>
+    # <Directory /var/www/webapp>
+    #     Options -Indexes +FollowSymLinks
+    #     AllowOverride All
+    #     Require all granted
+    # </Directory>
 
 </VirtualHost>
