--- a/webapp/my-httpd-vhosts.conf
+++ b/webapp/my-httpd-vhosts.conf
@@ -15,6 +15,7 @@
     SSLCertificateFile "/etc/ssl/certs/localhost.crt"
     SSLCertificateKeyFile "/etc/ssl/private/localhost.key"
 
+    WSGIScriptAlias / /var/www/webapp/application.wsgi
     # <Directory /var/www/webapp>
     #     Options -Indexes +FollowSymLinks
     #     AllowOverride All
