--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,16 @@ services:
       - "80:80"
       - "443:443"
     restart: always
-    environment:
-      - FLASK_APP=/var/www/webapp/run.py
-      - FLASK_ENV=production
-      - MYSQL_HOST=db
-      - MYSQL_PORT=3306
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=root
-      - MYSQL_DB=myflaskapp
-    volumes:
-      - ./webapp:/var/www/webapp
-    # networks:
-    #   - webnet
+    # environment:
+    #   - FLASK_APP=/var/www/webapp/run.py
+    #   - FLASK_ENV=production
+    #   - MYSQL_HOST=db
+    #   - MYSQL_PORT=3306
+    #   - MYSQL_USER=root
+    #   - MYSQL_PASSWORD=root
+    #   - MYSQL_DB=myflaskapp
+    # volumes:
+    #   - ./webapp:/var/www/webapp
 
   db:
     image: mysql:5.7
@@ -29,14 +27,6 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: myflaskapp
+      # MYSQL_DATABASE: myflaskapp
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    # networks:
-    #   - webnet
-
-# networks:
-#   webnet:
-
-# volumes:
-#   db_data:
